// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadAgenticConfig > basic-raw-free-json 1`] = `
{
  "name": "test-basic-raw-free-json",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://jsonplaceholder.typicode.com",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
  ],
}
`;

exports[`loadAgenticConfig > basic-raw-free-ts 1`] = `
{
  "name": "test-basic-raw-free-ts",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://jsonplaceholder.typicode.com",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
  ],
}
`;

exports[`loadAgenticConfig > invalid: pricing-base-inconsistent 1`] = `[ZodValidationError: Validation error: Invalid PricingPlanLineItem "base": reserved "base" LineItems must have "licensed" usage type. at "pricingPlans[1].lineItems[0]"]`;

exports[`loadAgenticConfig > invalid: pricing-custom-inconsistent 1`] = `[Error: Invalid pricingPlans: all PricingPlans which contain the same LineItems (by slug "custom") must have the same usage type ("licensed" or "metered").]`;

exports[`loadAgenticConfig > pricing-3-plans 1`] = `
{
  "name": "test-pricing-3-plans",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "features": [
        "Unlimited images **with watermark**",
        "No backend generation",
        "No custom templates\`",
      ],
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "features": [
        "Unlimited images **without watermark**",
        "Unlimited backend generation",
        "No custom templates",
      ],
      "interval": "month",
      "lineItems": [
        {
          "amount": 999,
          "interval": "month",
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Starter",
      "slug": "starter",
    },
    {
      "features": [
        "Unlimited images **without watermark**",
        "Unlimited backend generation",
        "Unlimited custom templates",
      ],
      "interval": "month",
      "lineItems": [
        {
          "amount": 2999,
          "interval": "month",
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Pro",
      "slug": "pro",
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-freemium 1`] = `
{
  "name": "test-pricing-freemium",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "amount": 499,
          "interval": "month",
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Basic",
      "slug": "basic",
      "trialPeriodDays": 7,
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-pay-as-you-go 1`] = `
{
  "name": "test-pricing-pay-as-you-go",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
        {
          "billingScheme": "per_unit",
          "rateLimit": {
            "interval": 86400,
            "maxPerInterval": 20,
          },
          "slug": "requests",
          "unitAmount": 0,
          "usageType": "metered",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "billingScheme": "tiered",
          "interval": "month",
          "slug": "requests",
          "tiers": [
            {
              "unitAmount": 0.467,
              "upTo": 999,
            },
            {
              "unitAmount": 0.053,
              "upTo": "inf",
            },
          ],
          "tiersMode": "volume",
          "usageType": "metered",
        },
      ],
      "name": "Pay-As-You-Go",
      "slug": "pay-as-you-go",
    },
  ],
}
`;
